# HW1-FAST-AQ-Parser-shreya

./: README.md  example.py  pyproject.toml  testing.ipynb
.github/workflows/: pytest.yml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
